# carelink-back

./: .gitignore  ANALISIS_FACTURACION_COMPLETO.md  CORRECCION_PAGOS_PARCIALES.md  ENDPOINT_TARIFAS_SERVICIOS.md  README_BACKEND_UPDATE.md  backup_antes_migracion_facturacion.sql  backup_antes_sync_20250706_182426.sql  debug_contrato.py  pyproject.toml  test_backend_integration.py  test_double_booking.py  test_estadisticas_facturacion.py  test_facturacion_completa.py  test_pagos_contrato.py  test_payment_endpoint.py  test_payment_partial.py  test_service_rates.py
app/: main.py
app/controllers/: carelink_controller.py  transporte_controller.py
app/crud/: carelink_crud.py
app/database/: connection.py
app/dto/v1/request/: activities.py  attendance_schedule.py  authorized_users.py  bill.py  clinical_evolution.py  contracts.py  family_member_create_request_dto.py  home_visit.py  medical_report.py  payment_method.py  professional.py  rates.py  transport_schedule.py  transporte.py  user_create_request_dto.py  user_login_request_dto.py  user_medical_record_create_request_dto.py  user_request_dto.py  (+1 more)
app/exceptions/: __init__.py  exceptions_classes.py  handler.py
app/models/: __init__.py  activities.py  activity_users.py  attendance_schedule.py  authorized_users.py  base.py  cares_per_user.py  clinical_evolutions.py  contracts.py  family_member.py  family_members_by_user.py  home_visit.py  interventions_per_user.py  medical_record.py  medical_report.py  medicines_per_user.py  payment_method.py  professional.py  rates.py  transporte.py  user.py  vaccines.py
app/security/: jwt_utilities.py
app/static/templates/: CONTRATO CENTRO DE DIA-1752465077348-949936205 (1).docx  CONTRATO DE TRANSPORTE-1752467433320-608946576 (2).docx
app/utils/: dependencies.py
certs/: ca.pem
docs/: DOBLE_AGENDAMIENTO.md
(+29 files in other folders)
