[tool.poetry]
name = "carelink-back"
version = "0.1.0"
description = ""
authors = ["Juan P. Isaza <jisazamp@gmail.com>, David Vera <davidvera@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.0"
fastapi = "^0.85.1"
SQLAlchemy = "^2.0.7"
PyMySQL = "^1.0.2"
uvicorn = "^0.19.0"
PyJWT = {extras = ["crypto"], version = "^2.6.0"}
passlib = "^1.7.4"
bcrypt = "^4.2.1"
boto3 = "^1.37.9"
python-multipart = "^0.0.20"
shortuuid = "^1.0.13"

[tool.poetry.dev-dependencies]
requests = "^2.28.1"
autopep8 = "^1.7.0"
