[project]
name = "carelink-back"
version = "0.1.0"
description = ""
authors = [{ name = "Juan P. Isaza", email = "jisazamp@gmail.com>" }]
requires-python = ">=3.8.0,<4"
dependencies = [
    "fastapi>=0.85.1,<0.86",
    "SQLAlchemy>=2.0.7,<3",
    "PyMySQL>=1.0.2,<2",
    "uvicorn>=0.19.0,<0.20",
    "PyJWT[crypto]>=2.6.0,<3",
    "passlib>=1.7.4,<2",
    "bcrypt>=4.2.1,<5",
    "boto3>=1.37.9,<2",
    "python-multipart>=0.0.20,<0.0.21",
    "shortuuid>=1.0.13,<2",
    "reportlab>=4.4.2,<5",
    "docxtpl>=0.16.7,<0.17",
]

[dependency-groups]
dev = [
    "requests>=2.28.1,<3",
    "autopep8>=1.7.0,<2",
]
